<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:id="@+id/imgLogo"
            android:src="@drawable/logo_android"
            android:contentDescription="@string/fragment_lobby_adm_logo_content_desc" />

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/fragment_lobby_adm_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancelarConsulta"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_lobby_adm_btn_cancelar_consulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCadastrarMedico"
            android:layout_marginTop="12dp"
            android:text="@string/fragment_lobby_adm_btn_cadastrar_medico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_lobby_adm_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
